refactor: migrate to Expo SDK 52 and restructure project
- Updated app.json to include Expo configuration and project details.
- Created App.tsx as the main entry point for the application.
- Modified babel.config.js to use babel-preset-expo.
- Adjusted metro.config.js to align with Expo's configuration.
- Updated package.json and package-lock.json with new dependencies and versions.
- Enhanced TypeScript configuration in tsconfig.json.
- Added .expo directory with devices.json and README.md for project-specific settings.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,28 @@
 {
-  "name": "RunAnywhereStarter",
-  "displayName": "RunAnywhere Starter"
+  "expo": {
+    "name": "RunAnywhere Starter",
+    "slug": "runanywhere-starter",
+    "version": "1.0.0",
+    "sdkVersion": "52.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "dark",
+    "splash": {
+      "backgroundColor": "#0F172A"
+    },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "dev.runanywhere.starter"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "backgroundColor": "#0F172A"
+      },
+      "package": "dev.runanywhere.starter"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "runanywhere-starter"
+      }
+    }
+  }
 }
