--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "runanywhere-starter-app",
   "version": "1.0.0",
   "description": "A comprehensive starter app demonstrating RunAnywhere SDK capabilities - on-device AI for React Native",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "patch-package"
@@ -17,29 +17,34 @@
     "@runanywhere/core": "^0.16.11",
     "@runanywhere/llamacpp": "^0.16.11",
     "@runanywhere/onnx": "^0.16.11",
+    "base64-js": "^1.5.1",
+    "expo": "~52.0.48",
+    "expo-asset": "~11.0.5",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.10",
+    "expo-font": "~13.0.4",
+    "expo-keep-awake": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "memoize-one": "^6.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-audio-recorder-player": "^3.6.12",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-nitro-modules": "^0.31.10",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.0.0",
-    "react-native-sound": "^0.11.2"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
     "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "^15.1.3",
-    "@react-native-community/cli-platform-android": "^15.1.3",
-    "@react-native-community/cli-platform-ios": "^15.1.3",
-    "@react-native/babel-preset": "^0.76.5",
-    "@react-native/eslint-config": "^0.76.5",
-    "@react-native/metro-config": "^0.76.5",
-    "@react-native/typescript-config": "^0.76.5",
     "@types/react": "^18.3.0",
-    "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "patch-package": "^8.0.1",
     "prettier": "^3.4.2",
@@ -47,5 +52,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "private": true
 }
