--- a/package.json
+++ b/package.json
@@ -20,31 +20,32 @@
     "base64-js": "^1.5.1",
     "expo": "~52.0.48",
     "expo-asset": "~11.0.5",
+    "expo-av": "^16.0.8",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^6.0.20",
     "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.10",
     "expo-font": "~13.0.4",
     "expo-keep-awake": "~14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "memoize-one": "^6.0.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-nitro-modules": "^0.31.10",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-zip-archive": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
     "@babel/preset-env": "^7.25.0",
-    "@babel/runtime": "^7.25.0",
+    "@babel/runtime": "^7.28.6",
     "@types/react": "^18.3.0",
     "eslint": "^8.57.0",
     "patch-package": "^8.0.1",
