--- a/react-native-starter-app-main/package.json
+++ b/react-native-starter-app-main/package.json
@@ -23,12 +23,15 @@
     "@runanywhere/onnx": "^0.18.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-image-picker": "^5.4.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-live-audio-stream": "^1.1.1",
     "react-native-nitro-modules": "^0.31.10",
+    "react-native-pdf-light": "^2.4.2",
     "react-native-quick-sqlite": "^8.2.7",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-sound": "^0.13.0"
