--- a/react-native-starter-app-main/app.json
+++ b/react-native-starter-app-main/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "RunAnywhereStarter",
-  "displayName": "RunAnywhere Starter"
+  "name": "Pinpointer",
+  "displayName": "Pinpointer"
 }
