--- a/ios/RunAnywhereStarter/Info.plist
+++ b/ios/RunAnywhereStarter/Info.plist
@@ -46,7 +46,7 @@
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This app uses the local network to connect to Metro bundler during development</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs microphone access for speech recognition and voice agent features</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
@@ -67,5 +67,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Lora-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
